[gd_scene load_steps=2 format=3 uid="uid://bf1wg12aof1xb"]

[ext_resource type="Script" path="res://Helper Classes/GUI/ThesisRecitation.gd" id="1_cvb78"]

[node name="ThesisView" type="PanelContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 101.0
grow_horizontal = 2
size_flags_vertical = 3

[node name="ThesisRecitation" type="VBoxContainer" parent="." node_paths=PackedStringArray("title", "summary", "content", "dynamtext")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_cvb78")
title = NodePath("HBoxContainer/TitleLabel")
summary = NodePath("SummaryLabel")
content = NodePath("ContentLabel")
dynamtext = NodePath("HoverTextLabel")

[node name="HBoxContainer" type="HBoxContainer" parent="ThesisRecitation"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ThesisRecitation/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="CloseButton" type="Button" parent="ThesisRecitation/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2
text = "Close"

[node name="SummaryLabel" type="RichTextLabel" parent="ThesisRecitation"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "This is placeholder Text"
fit_content = true

[node name="ContentLabel" type="RichTextLabel" parent="ThesisRecitation"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[url=\"Fenn\"]This is a link?[/url]"
fit_content = true

[node name="HoverTextLabel" type="Label" parent="ThesisRecitation"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
autowrap_mode = 2

[node name="HoverTimeDisplay" type="ProgressBar" parent="ThesisRecitation"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
show_percentage = false

[node name="HoverTimer" type="Timer" parent="ThesisRecitation"]
one_shot = true

[connection signal="button_up" from="ThesisRecitation/HBoxContainer/CloseButton" to="ThesisRecitation" method="_on_close_button_button_up"]
[connection signal="meta_clicked" from="ThesisRecitation/SummaryLabel" to="ThesisRecitation" method="_on_summary_label_meta_clicked"]
[connection signal="meta_clicked" from="ThesisRecitation/ContentLabel" to="ThesisRecitation" method="_on_content_label_meta_clicked"]
[connection signal="meta_hover_ended" from="ThesisRecitation/ContentLabel" to="ThesisRecitation" method="_on_content_label_meta_hover_ended"]
[connection signal="meta_hover_started" from="ThesisRecitation/ContentLabel" to="ThesisRecitation" method="_on_content_label_meta_hover_started"]
[connection signal="timeout" from="ThesisRecitation/HoverTimer" to="ThesisRecitation" method="_on_hover_timer_timeout"]
